--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,32 @@ section li {
 	padding-bottom: .35em;
 }
 
+/* nav menu styles */
+
+#nav_menu {
+	border-bottom: 3px solid #800000;
+	background-color: #800000;
+}
+
+#nav_menu ul {
+    list-style-type: none;
+    display: flex;
+}
+
+#nav_menu a {
+    text-align: center;
+    display: block;
+    padding: .7em 0;
+    background-color: #800000;
+    font-weight: bold;
+    text-decoration: none;
+    color: white;
+}
+
+#nav_menua:hover {
+	color: yellow;
+}
+
 /* the styles for the article */
 article {
 	padding: .5em 0;
